--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://thejobbridge-inc.com" />
     <link rel="canonical" href="https://thejobbridge-inc.com" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <title>The Job Bridge - AI-Powered Employment for People with Disabilities</title>
     <link rel="icon" type="image/png" href="/favicon.png" />
     <!-- OTTO Pixel installation script -->
